# vinted-bot

./: .gitignore  pyproject.toml
vinted/: bot.py  mongodb.py  request.py  settings.py  vinted_api.py
