[tool.poetry]
name = "vinted"
version = "0.1.0"
description = ""
authors = ["smatand <andrejsmatana0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
pytest = "^8.0.0"
logging = "^0.4.9.6"
discord-py = "^2.3.2"
motor = "^3.3.2"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
